lints localities annd gloabl variable names
